# paper-search

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
paper_search/: cli.py  config.py  formatter.py  search.py
paper_search/apis/: github.py  openalex.py  semantic_scholar.py  unpaywall.py
paper_search/models/: paper.py
tests/: capture_fixtures.py  conftest.py  test_cli.py  test_config.py  test_formatter.py  test_github.py  test_openalex.py  test_search.py  test_semantic_scholar.py  test_unpaywall.py
tests/fixtures/: github_search.json  openalex_search.json  openalex_topics.json  s2_bulk_search.json  s2_paper_detail.json  s2_recommendations.json  s2_relevance_search.json  unpaywall_closed.json  unpaywall_oa.json
