[project]
name = "paper-search"
version = "0.1.0"
description = "Scientific paper search and ranking across OpenAlex, Semantic Scholar, and Unpaywall"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
paper-search = "paper_search.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
